--- a/index.ipynb
+++ b/index.ipynb
@@ -30,9 +30,13 @@
     "hex_script_pubkey = '76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac'\n",
     "\n",
     "# bytes.fromhex to get binary\n",
+    "script_pubkey = bytes.fromhex(hex_script_pubkey)\n",
     "# parse with Script\n",
+    "s = Script.parse(script_pubkey)\n",
     "# get the 3rd element, which should be the hash160\n",
-    "# convert h160 to p2pkh address"
+    "h160 = s.elements[2]\n",
+    "# convert h160 to p2pkh address\n",
+    "print(h160_to_p2pkh_address(h160))"
    ]
   },
   {
@@ -83,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
